# ChangeLog for sys-apps/util-linux
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/util-linux/ChangeLog,v 1.257 2009/02/15 00:21:10 vapier Exp $

  15 Feb 2009; Mike Frysinger <vapier@gentoo.org> util-linux-2.14.2.ebuild:
  Update loop-aes patch #258456.

  15 Feb 2009; Mike Frysinger <vapier@gentoo.org> util-linux-2.14.1.ebuild,
  util-linux-2.14.2.ebuild:
  Touchup wording on USE=loop-aes info.

*util-linux-2.14.2 (10 Feb 2009)

  10 Feb 2009; Mike Frysinger <vapier@gentoo.org> +util-linux-2.14.2.ebuild:
  Version bump.

  30 Dec 2008; Mike Frysinger <vapier@gentoo.org> util-linux-2.14.1.ebuild,
  util-linux-9999.ebuild:
  Depend on sys-libs/e2fsprogs-libs rather than sys-fs/e2fsprogs #249663.

  06 Dec 2008; Mike Frysinger <vapier@gentoo.org>
  +files/util-linux-2.14-AC_BIG_ENDIAN.patch, util-linux-2.14.1.ebuild:
  Add fix from upstream for missing call to AC_BIG_ENDIAN in configure.

  02 Dec 2008; Brent Baude <ranger@gentoo.org> util-linux-2.14.1.ebuild:
  stable ppc64, bug 249107

  02 Dec 2008; Raúl Porcel <armin76@gentoo.org> util-linux-2.14.1.ebuild:
  alpha/ia64/sparc stable wrt #249107

  30 Nov 2008; Markus Meier <maekke@gentoo.org> util-linux-2.14.1.ebuild:
  amd64/x86 stable, bug #249107

  29 Nov 2008; Tobias Scherbaum <dertobi123@gentoo.org>
  util-linux-2.14.1.ebuild:
  ppc stable, bug #249107

  29 Nov 2008; <solar@gentoo.org> util-linux-2.14.1.ebuild:
  - quick hack for dirty times

  27 Nov 2008; Jeroen Roovers <jer@gentoo.org> util-linux-2.14.1.ebuild:
  Stable for HPPA (bug #249107).

  17 Nov 2008; Diego E. Pettenò <flameeyes@gentoo.org>
  files/util-linux-2.12q-debian-10cfdisk.patch:
  Fix patch with absolute paths.

  26 Oct 2008; Mike Frysinger <vapier@gentoo.org> files/crypto-loop.initd:
  Apply POSIX patch #236858.

  26 Oct 2008; Mike Frysinger <vapier@gentoo.org> util-linux-2.14.1.ebuild:
  Update loop-aes support #242874 by Fabio Coatti and Lars (Polynomial-C).
