@@ -9,7 +9,9 @@ DIST util-linux-ng-2.14.1-20081015.diff.bz2 51788 RMD160 eb657a6e5a0cdd3545716ce
 DIST util-linux-ng-2.14.1.tar.bz2 2929618 RMD160 23484769f7b73aeb3170333e7656ae2c9613d380 SHA1 4b738db04b27278329af216b15e96752e5af8cc3 SHA256 bf289c5399ab78674d9662ff2906a63ab540e88bf8bb1d3c7326dc8b1bef802c
 DIST util-linux-ng-2.14.2-20090214.diff.bz2 51898 RMD160 9ea70000e907a5233419d882d2a0a65e1442fbc9 SHA1 f5be6295afa02d3123928ada854589995a549c5e SHA256 c281b8b0a7c1650129a32185e20816a6bc37b0a5363fc5a4a0a7953e4705627a
 DIST util-linux-ng-2.14.2.tar.bz2 2956769 RMD160 ae81ed940157a37b33170365ac77699ffb14e128 SHA1 8d5ba161627dcf9295cc649c46ea15c333ff6b68 SHA256 108e63e9a007f6a8c0eff841dd38e0fe3b635c98b35bfac2d89b4b1a1ce0630e
+DIST util-linux-ng-2.15.tar.bz2 10184100 RMD160 93df61ee935cd9a524df68b28bc4e3adcef8d3ef SHA1 7fe31e5e56fdccfa0433fcccb1b4ce147fbbfc17 SHA256 db4dcbf99d989a8f539d7521e9e64047367fa2ccdcbb91517cdec19693a41ffd
 EBUILD util-linux-2.14.1.ebuild 2858 RMD160 7e2e17aa3fdd70e0a69f772ea8afb869efd6d02f SHA1 fe71f6ab8ecc16a6dae2853df946d1e54ad071af SHA256 f96bd3f757bf1f249512238be0175162238c74f3198882d72f6423a7e14617c5
 EBUILD util-linux-2.14.2.ebuild 2730 RMD160 5b547fcbb44b804b5149a82ea23fa3d7a486ad26 SHA1 44006dd6da8914e2725c7a45de9ae2545f8e21f8 SHA256 0da2f0418e7b0e66fa35642b27e34c214973813a6004f3a2fef910a5d7d45341
-MISC ChangeLog 39357 RMD160 f510d1aa52b6e6dbc7d233d4dbf2b597b6d5f378 SHA1 d54fed2243bf4c8f255d76bced08ec782a32da02 SHA256 5f2420d9fae8d3f960bab1d0ef9290f15742ab73353cb6745d55f8f2445ceb34
+EBUILD util-linux-2.15.ebuild 2728 RMD160 c7a00960f7af34f384df5f60da7099a9161e3d4f SHA1 bdf28eb36be0007060f886208dc143c86f6c3414 SHA256 1f963303ce7f18024366c060a9e735e12e75f9dd7a832ffee210424f4adef925
+MISC ChangeLog 39481 RMD160 c24b654719649f29510c4e54e013a8bcf7a63db0 SHA1 547383e4cec85d9b3c0fbac362a0d5c9f5182c91 SHA256 9c3a5669ace9bd5b6d7bb57bec1825cbee4eee941ed42f4cd783aa74cef7ce26
 MISC metadata.xml 247 RMD160 233aa38a3ce28f169d18de949377c5c26f23bdff SHA1 b908dc27f495e4313a30a8883346d6cef6467f27 SHA256 4e9e787bd294b0810c142758275e148780035c7d00618e7808d34fe14f26c3b6
